[package]
name = "embree"
version = "0.3.6"
authors = ["Will Usher <will@willusher.io>"]
homepage = "https://github.com/Twinklebear/embree-rs"
documentation = "http://www.willusher.io/embree-rs/embree-rs/"
repository = "https://github.com/Twinklebear/embree-rs"
readme = "README.md"
license = "MIT"
description = """
A wrapper for the Embree ray tracing kernels.
"""
keywords = ["embree", "ray", "simd", "bvh"]
build = "build.rs"

exclude = [
	".travis.yml",
	"*.png",
	".gitignore",
	"examples/*"
]

[dependencies]
cgmath = "0.17.0"

