[package]
name = "embree"
version = "0.3.7"
authors = ["Will Usher <will@willusher.io>"]
homepage = "https://github.com/Twinklebear/embree-rs"
documentation = "https://docs.rs/embree/"
repository = "https://github.com/Twinklebear/embree-rs"
readme = "README.md"
license = "MIT"
description = """
A wrapper for the Embree ray tracing kernels.
"""
keywords = ["embree", "ray", "simd", "bvh"]
build = "build.rs"
edition = "2021"

exclude = [
	".travis.yml",
	"*.png",
	".gitignore",
	"examples/*"
]

[workspace]
members = [
	"examples/*",
]
exclude = ["examples/todos"]
