[package]
name = "support"
version = "0.1.0"
authors = ["Will Usher <will@willusher.io>"]
edition = "2021"

[dependencies]
image = "0.24.5"
arcball = "1.1.0"
cgmath = "0.18"
clock_ticks = "0.1.1"
#egui = { version = "0.21", features = ["bytemuck"] }
#egui-winit = "0.21"
#egui-wgpu = "0.21"
wgpu = "0.15.1"
winit = "0.28.1"
futures = { version = "0.3", features = ["executor"]}
rayon = "1.5"

